# cryptofundapp

./: .eslintrc.json  Anchor.toml  README.md  auth.ts  middleware.ts  next.config.js  package-lock.json  package.json  program-keypair.json  tsconfig.build.json  tsconfig.json  vercel.json
prisma/: schema.prisma  seed.ts
prisma/migrations/20250417225445_initial_migration/: migration.sql
programs/crypto-fund-me/: Cargo.toml
programs/crypto-fund-me/src/: lib.rs
src/: middleware.ts
src/app/: layout.tsx  page.tsx  providers.tsx  theme.ts
src/app/components/: CampaignCard.tsx  CurrencySelector.tsx  DonationForm.tsx  DonorLeaderboard.tsx  Footer.tsx  GridFix.tsx  Navbar.tsx  PaymentForm.tsx  SignInButton.tsx  WalletConnectButton.tsx
src/app/create/: page.tsx
src/app/explore/: page.tsx
src/app/lib/: cryptoProcessing.ts  donationService.ts  mockWalletConnectors.ts  paymentProcessor.ts  smartContract.ts  types.ts  userService.ts
src/app/platform-rules/: page.tsx
src/app/privacy/: page.tsx
src/app/profile/: page.tsx
src/app/terms/: page.tsx
src/config/: wallet.ts
src/hooks/: useSession.ts
src/lib/: auth.ts  cryptoprocessing.ts  prisma.ts  session.ts  walletConfig.ts
src/lib/cryptoprocessing/: index.ts
src/lib/hooks/: useAuth.ts
src/lib/solana/: campaign.ts  jupiter.ts
src/lib/wormhole/: bridge.ts
src/solana/: Anchor.toml  build.sh  crypto-fund-me-keypair.json  deploy.sh  package-lock.json  package.json
src/solana/programs/crypto-fund-me/: Cargo.toml
src/solana/programs/crypto-fund-me/src/: lib.rs
temp_exclude/: crypto-fund-me.ts
(+36 files in other folders)
