[package]
name = "crypto-fund-me"
version = "0.1.0"
description = "Solana smart contract for crypto crowdfunding"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "crypto_fund_me"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
solana-program = "1.14.12" 