[package]
name = "crypto-fund-me"
version = "0.1.0"
description = "Solana smart contract for crypto crowdfunding"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "crypto_fund_me"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.17.0" 